file(GLOB LuaSrc "Lua/src/*.c" "Lua/src/*.h")
file(GLOB HashSrc "Hash/*.cpp" "Hash/*.h")
file(GLOB AntlrSrc "Antlr-3.4/libantlr3c-3.4/src/*.c")
file(GLOB FmtSrc "fmt/*.cc")
file(GLOB StackWalkerSrc "StackWalker/*.cpp")
file(GLOB PlustacheSrc "plustache/*.cpp")
set(StamSimpleFluidSrc StamSimpleFluid/solver.c)
BasicLibrary(ForeignMisc "${LuaSrc};${HashSrc};${AntlrSrc};${FmtSrc};${StackWalkerSrc};${PlustacheSrc};${StamSimpleFluidSrc}")

add_subdirectory("FreeType")
add_subdirectory("tinyxml2-master")

include_directories(Antlr-3.4/libantlr3c-3.4 Antlr-3.4/libantlr3c-3.4/include)
if (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
    target_compile_options(ForeignMisc PRIVATE -Wno-parentheses-equality -Wno-incompatible-pointer-types-discards-qualifiers)
else()
    target_compile_options(ForeignMisc PRIVATE /wd4996 /wd4101)
endif()
